Signed-off-by: liu wei <15895891210@sina.cn>

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="万朱浩的web前端H5工程师个人简历">
-    <meta name="keywords" content="web前端，H5，web前端H5个人简历，前端H5开发">
+    <meta name="description" content="刘伟的web前端H5工程师个人简历">
+    <meta name="keywords" content="web前端，H5，web前端H5个人简历，前端H5开发，CSS3，javascript">
     <title>H5前端工程师简历</title>
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css"/>
+    <link rel="stylesheet" type="text/css" href="assets/css/load_animate.css"/>
     <link rel="stylesheet" type="text/css" href="assets/css/jquery.fullPage.css"/>
     <link rel="stylesheet" type="text/css" href="assets/css/nprogress.css"/>
     <link rel="stylesheet" type="text/css" href="assets/css/section_one.css"/>
@@ -15,11 +16,12 @@
     <link rel="stylesheet" type="text/css" href="assets/css/section_three.css"/>
     <link rel="stylesheet" type="text/css" href="assets/css/section_four.css"/>
     <link rel="stylesheet" type="text/css" href="assets/css/section_five.css"/>
+    <script src="assets/js/vender/modernizr.custom.js" type="text/javascript" charset="utf-8"></script>
 </head>
-<body data-vide-bg="mp4: assets/video/bg-video.mp4">
+<body data-vide-bg="mp4: assets/video/bg-video.mp4" id="ip-container">
 
 <!-- top -->
-<div class="top-nav" style="z-index: 1; position: fixed;">
+<div class="top-nav">
     <header class="container">
         <div class="inner-container">
             <div id="logo">
@@ -40,7 +42,7 @@
                         <a href="#2" id="nav-skill">Skills</a>
                     </li>
                     <li>
-                        <a href="#3" id="nav-workEXP">Timeline</a>
+                        <a href="#3" id="nav-workEXP">Experience</a>
                     </li>
                     <li>
                         <a href="#4" id="nav-prjEXP">Hobbies</a>
@@ -57,16 +59,30 @@
 <!-- out-wrapper -->
 <div id="out-wrapper">
     <div class="section" id="section_one">
+
+        <!-- load animate -->
+        <header class="ip-header">
+            <h1 class="ip-logo">
+                <svg class="ip-inner" width="100%" height="100%" viewBox="-132 -200 800 600" preserveAspectRatio="xMidYMin meet"
+                     aria-labelledby="logo_title">
+                    <title id="logo_title">Github Logo</title>
+                    <path d="M267.75,0c37.128,0,71.91,7.038,104.345,21.114c32.439,14.076,60.793,33.252,85.068,57.528    c24.277,24.276,43.453,52.632,57.529,85.068c14.072,32.436,21.111,67.218,21.111,104.346c0,37.127-7.039,71.911-21.111,104.346    c-14.076,32.438-33.252,60.791-57.529,85.068c-24.275,24.275-52.631,43.451-85.068,57.527    c-32.436,14.076-67.217,21.113-104.345,21.113s-71.91-7.037-104.346-21.111c-32.436-14.076-60.792-33.252-85.068-57.527    c-24.276-24.277-43.35-52.633-57.222-85.068C7.242,339.967,0.306,305.184,0.306,268.056s6.936-71.91,20.808-104.346    s32.946-60.792,57.222-85.068s52.632-43.452,85.068-57.528S230.622,0,267.75,0z M267.75,29.376    c-33.048,0-64.056,6.222-93.024,18.666S120.462,77.52,98.838,99.144s-38.658,46.92-51.102,75.888S29.07,235.008,29.07,268.056    c0,33.047,6.222,64.055,18.666,93.024c12.444,28.969,29.478,54.264,51.102,75.889c21.624,21.623,46.92,38.658,75.888,51.102    c28.968,12.443,59.976,18.666,93.024,18.666s64.056-6.223,93.025-18.666c28.967-12.441,54.264-29.479,75.887-51.102    c21.625-21.625,38.658-46.92,51.102-75.889c12.445-28.971,18.666-59.979,18.666-93.024c0-33.046-6.221-64.056-18.666-93.024    c-12.441-28.968-29.477-54.264-51.102-75.888c-21.623-21.624-46.92-38.658-75.887-51.102    C331.806,35.598,300.798,29.376,267.75,29.376z M336.294,312.121c25.703-8.979,38.555-25.908,38.555-50.797    c0-13.056-2.141-23.358-6.426-30.906c-4.283-7.548-11.117-13.77-20.502-18.666c-4.488-2.448-9.791-3.876-15.912-4.284    c-6.119-0.408-12.645-0.51-19.584-0.306c-6.936,0.204-14.277,0.612-22.031,1.224c-7.752,0.612-15.504,0.918-23.254,0.918    c-7.752,0-15.504-0.306-23.256-0.918s-15.096-1.02-22.032-1.224s-13.464-0.102-19.584,0.306s-11.424,1.836-15.912,4.284    c-9.384,4.896-16.116,11.118-20.196,18.666s-6.12,17.85-6.12,30.906c0,24.889,12.852,41.82,38.556,50.797    c4.488,1.223,9.384,2.445,14.688,3.672c4.488,0.813,10.098,1.631,16.83,2.445c6.732,0.816,14.586,1.227,23.562,1.227h26.927    c8.568,0,16.32-0.408,23.26-1.227c6.936-0.814,12.852-1.633,17.748-2.445C327.318,314.568,332.214,313.344,336.294,312.121z     M409.734,223.38c0,13.056-1.43,25.398-4.283,37.026c-2.857,11.625-8.16,22.135-15.912,31.518    c-7.752,9.385-18.463,17.137-32.131,23.256c-13.668,6.121-31.109,9.996-52.326,11.629c3.264,1.631,7.447,3.672,12.547,6.119    c5.1,2.449,9.486,7.141,13.158,14.076c2.039,4.486,3.365,11.016,3.977,19.584c0.613,8.566,0.918,17.34,0.918,26.314    c0,8.979-0.102,17.238-0.305,24.785c-0.205,7.549,0.102,12.141,0.918,13.771c1.631,3.264,3.979,6.119,7.037,8.566    c3.061,2.447,5.611,4.283,7.65,5.508c2.039,1.227,2.65,2.756,1.836,4.592c-0.816,1.836-3.672,2.959-8.568,3.363    c-2.447,0-5.508-0.404-9.18-1.223c-3.672-0.816-7.143-2.244-10.404-4.285c-3.262-2.039-6.018-4.59-8.262-7.646    c-2.244-3.063-3.365-7.039-3.365-11.938v-50.184c0-5.711-1.326-9.791-3.98-12.24c-2.648-2.447-5.402-4.08-8.262-4.895v66.096    c0,11.832,1.428,19.584,4.285,23.256c1.223,1.633,2.346,3.367,3.365,5.203s1.633,3.365,1.836,4.59    c0.205,1.223-0.51,1.938-2.145,2.143c-1.631,0.203-4.689-0.307-9.18-1.529c-8.568-2.039-14.688-6.732-18.359-14.076    s-5.508-15.096-5.508-23.256v-64.871h-13.461v64.871c0,8.16-1.734,15.912-5.202,23.256s-9.69,12.037-18.666,14.076    c-4.488,1.225-7.446,1.732-8.874,1.529c-1.428-0.203-2.142-0.92-2.142-2.143c0-1.225,0.612-2.754,1.836-4.59    s2.448-3.57,3.672-5.203c0.816-1.631,1.734-4.488,2.754-8.568c1.02-4.078,1.53-8.975,1.53-14.688v-66.096    c-2.856,0.814-5.508,2.445-7.956,4.896c-2.448,2.447-3.672,6.527-3.672,12.24v50.184c0,4.896-1.122,8.873-3.366,11.936    c-2.244,3.061-4.998,5.607-8.262,7.648c-3.264,2.039-6.732,3.471-10.404,4.283c-3.672,0.816-6.732,1.225-9.18,1.225    c-4.896-0.406-7.752-1.527-8.568-3.363s-0.204-3.367,1.836-4.59c2.04-1.227,4.59-3.063,7.65-5.512    c3.06-2.445,5.406-5.303,7.038-8.564c0.816-2.041,1.122-7.447,0.918-16.221c-0.204-8.771-0.306-18.463-0.306-29.068    c-3.264,1.225-7.548,2.041-12.852,2.449c-5.304,0.404-11.22,0-17.748-1.227c-11.016-2.041-19.38-5.607-25.092-10.711    c-5.712-5.1-11.22-13.158-16.524-24.174c-2.856-5.303-6.018-9.689-9.486-13.158c-3.468-3.467-6.528-6.221-9.18-8.262    c-2.652-2.039-4.692-3.773-6.12-5.201c-1.428-1.428-1.53-2.754-0.306-3.979c2.448-2.855,5.814-4.08,10.098-3.674    c4.284,0.408,6.834,1.021,7.65,1.836c4.896,2.039,9.792,6.324,14.688,12.854c4.896,6.531,9.996,12.037,15.3,16.523    c2.448,2.039,5.508,4.078,9.18,6.119c3.672,2.039,7.752,3.471,12.24,4.283c4.488,0.816,9.384,0.816,14.688,0    c5.304-0.813,10.608-3.059,15.912-6.729c1.224-5.307,3.162-9.486,5.814-12.549c2.652-3.061,5.508-5.508,8.568-7.344    c3.06-1.836,5.916-3.264,8.568-4.285c2.652-1.02,4.794-1.938,6.426-2.754c-22.44-1.631-40.8-5.402-55.08-11.318    s-25.602-13.467-33.966-22.646c-8.364-9.18-14.076-19.686-17.136-31.519c-3.06-11.832-4.59-24.276-4.59-37.332    c0-13.464,2.04-25.5,6.12-36.108s9.792-19.992,17.136-28.152c-3.264-9.792-4.386-20.094-3.366-30.906s3.162-20.502,6.426-29.07    c15.504,0.816,28.458,4.08,38.862,9.792c10.404,5.712,17.646,10.404,21.726,14.076c17.544-4.896,35.7-7.344,54.468-7.344h4.284    c17.543,0,34.479,2.04,50.795,6.12c4.488-3.672,11.832-8.16,22.033-13.464c10.199-5.304,22.85-8.364,37.943-9.18    c3.264,8.16,5.406,17.34,6.426,27.54c1.021,10.2,0.307,19.992-2.141,29.376c8.16,8.16,14.48,17.85,18.971,29.07    C407.49,196.35,409.734,209.1,409.734,223.38z M266.526,209.304h0.612h0.612H266.526z M345.474,257.04    c0,5.712-1.527,10.608-4.59,14.688c-3.061,4.08-6.834,6.119-11.322,6.119c-4.486,0-8.158-2.039-11.016-6.119    c-2.854-4.081-4.285-8.977-4.285-14.688s1.432-10.608,4.285-14.688c2.855-4.08,6.527-6.12,11.016-6.12s8.264,2.04,11.322,6.12    C343.945,246.432,345.474,251.328,345.474,257.04z M225.522,257.04c0,5.712-1.53,10.608-4.59,14.688s-6.834,6.119-11.322,6.119    s-8.16-2.039-11.016-6.119c-2.856-4.081-4.284-8.977-4.284-14.688s1.428-10.608,4.284-14.688s6.528-6.12,11.016-6.12    s8.262,2.04,11.322,6.12C223.993,246.432,225.522,251.328,225.522,257.04z"/>
+                </svg>
+            </h1>
+            <div class="ip-loader">
+                <svg class="ip-inner" width="60px" height="60px" viewBox="0 0 80 80">
+                    <path class="ip-loader-circlebg" d="M40,10C57.351,10,71,23.649,71,40.5S57.351,71,40.5,71 S10,57.351,10,40.5S23.649,10,40.5,10z"/>
+                    <path id="ip-loader-circle" class="ip-loader-circle" d="M40,10C57.351,10,71,23.649,71,40.5S57.351,71,40.5,71 S10,57.351,10,40.5S23.649,10,40.5,10z"/>
+                </svg>
+            </div>
+        </header><!-- /load animate -->
+
         <div class="section-container">
-            <img class="big-portrait" src="assets/image/section_one/portrait-stormtroopocat.png">
+            <div class="place-hold"></div>
             <h1 class="section-title">刘伟</h1>
-            <p>工作经验 & 3年</p>
-            <p>Web前端经验 & 1.5年</p>
-            <p>学历 & 本科</p>
+            <p>在职</p>
+            <p>前端工作 & 1.5年</p>
             <p>中国 · 江苏 · 苏州</p>
-            <p>目前状态 & 在职</p>
-            <p>期望工作 & web前端工程师</p>
-            <p>期望行业 & 互联网、电子商务、游戏、生活服务</p>
             <div class="space-line"></div>
             <p>个人工作态度端正，有良好进取心，学习能力强，可快速融入团队。
                 熟悉W3C标准，对表现与数据分离、Web语义化等有深刻理解。 深入理解JavaScript面向对象原理、熟悉MVC的设计模式。 理解AJAX运作机制，熟练掌握JQuery等主流JS框架。
@@ -115,6 +131,7 @@
             <a href="javascript:void(0);" target="_blank">Html5</a>
             <a href="javascript:void(0);" target="_blank">百度地图</a>
             <a href="javascript:void(0);" target="_blank">Websocket</a>
+            <a href="javascript:void(0);" target="_blank">Mongodb</a>
         </div>
 
         <div class="space-line"></div>
@@ -204,6 +221,18 @@
                 </div>
 
                 <p>之前公司的一个项目让我尝试使用了nodejs，一发不可的爱上了，新的项目暂时没有用到nodejs开发，目前我是拿来搭建前端自动化开发环境的。</p>
+            </div>
+
+            <div class="skill-item">
+                <div class="img">
+                    <img src="assets/image/section_two/icon-mongodb.jpg" alt="Mongodb">
+                </div>
+                <div>
+                    <h3>Mongodb</h3>
+                    <div class="star" data-score="3"></div>
+                </div>
+
+                <p>MongoDB是一个基于分布式文件存储的数据库。之前的nodejs项目中使用到该数据库，基本掌握了增、删、查、改，以及一些进阶操作如：aggregate。</p>
             </div>
 
             <div class="skill-item">
@@ -364,6 +393,18 @@
 
             <div class="skill-item">
                 <div class="img">
+                    <img src="" alt="Regexp">
+                </div>
+                <div>
+                    <h3>正则表达式</h3>
+                    <div class="star" data-score="2.5"></div>
+                </div>
+
+                <p>正则表通常被用来检索、替换那些符合某个模式(规则)的文本。基本掌握了正则表达式规则，去匹配简单文本，对于较为复杂的正则表达式还需要进一步学习。</p>
+            </div>
+
+            <div class="skill-item">
+                <div class="img">
                     <img src="assets/image/section_two/icon-google.jpg" alt="Chrome">
                 </div>
                 <div>
@@ -483,14 +524,13 @@
             </div>
 
 
-
             <div class="skill-item">
                 <div class="img">
                     <img src="assets/image/section_two/icon-git.jpg" alt="Git">
                 </div>
                 <div>
                     <h3>Git</h3>
-                    <div class="star" data-score="4"></div>
+                    <div class="star" data-score="3.5"></div>
                 </div>
 
                 <p>版本管理工具，这个是自学的，基本入门了常用命令和使用方法，然而公司并没有使用。</p>
@@ -562,12 +602,11 @@
         <a href="https://github.com/liuwei1207" target="_blank">公司不用github..所以，github提交惨不忍睹...</a>
     </div>
 </div><!-- /out-wrapper -->
+
+
 <script src="assets/js/vender/jquery-1.12.4.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="assets/js/load_animate.js" type="text/javascript" charset="utf-8"></script>
 <script src="assets/js/vender/nprogress.js" type="text/javascript" charset="utf-8"></script>
-<script>
-    //页面加载进度条启用
-    NProgress.start();
-</script>
 <script src="assets/js/vender/jquery.fullPage.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="assets/js/vender/jquery.video-bg.js" type="text/javascript" charset="utf-8"></script>
 <script src="assets/js/section_one.js" type="text/javascript" charset="utf-8"></script>
@@ -578,11 +617,6 @@
 <script src="assets/js/vender/echarts-wordcloud.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="assets/js/section_four.js" type="text/javascript" charset="utf-8"></script>
 </body>
-
-<script>
-    //页面加载进度条停用
-    NProgress.done();
-</script>
 
 
 </html>
