--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <div id="logo">
                 <div id="header_img"><img src="assets/image/section_one/portrait.jpg" alt=""></div>
                 <div id="header_p">
-                    <p id="header_p1">刘伟</p>
+                    <p id="header_p1">Liuwei</p>
                     <p id="header_p2">
-                        <small>talk is cheap, show me the code.</small>
+                        <small>He is a Front-End Engineer</small>
                     </p>
                 </div>
             </div>
@@ -63,7 +63,8 @@
         <!-- load animate -->
         <header class="ip-header">
             <h1 class="ip-logo">
-                <svg class="ip-inner" width="100%" height="100%" viewBox="-132 -200 800 600" preserveAspectRatio="xMidYMin meet"
+                <svg class="ip-inner" width="100%" height="100%" viewBox="-132 -200 800 600"
+                     preserveAspectRatio="xMidYMin meet"
                      aria-labelledby="logo_title">
                     <title id="logo_title">Github Logo</title>
                     <path d="M267.75,0c37.128,0,71.91,7.038,104.345,21.114c32.439,14.076,60.793,33.252,85.068,57.528    c24.277,24.276,43.453,52.632,57.529,85.068c14.072,32.436,21.111,67.218,21.111,104.346c0,37.127-7.039,71.911-21.111,104.346    c-14.076,32.438-33.252,60.791-57.529,85.068c-24.275,24.275-52.631,43.451-85.068,57.527    c-32.436,14.076-67.217,21.113-104.345,21.113s-71.91-7.037-104.346-21.111c-32.436-14.076-60.792-33.252-85.068-57.527    c-24.276-24.277-43.35-52.633-57.222-85.068C7.242,339.967,0.306,305.184,0.306,268.056s6.936-71.91,20.808-104.346    s32.946-60.792,57.222-85.068s52.632-43.452,85.068-57.528S230.622,0,267.75,0z M267.75,29.376    c-33.048,0-64.056,6.222-93.024,18.666S120.462,77.52,98.838,99.144s-38.658,46.92-51.102,75.888S29.07,235.008,29.07,268.056    c0,33.047,6.222,64.055,18.666,93.024c12.444,28.969,29.478,54.264,51.102,75.889c21.624,21.623,46.92,38.658,75.888,51.102    c28.968,12.443,59.976,18.666,93.024,18.666s64.056-6.223,93.025-18.666c28.967-12.441,54.264-29.479,75.887-51.102    c21.625-21.625,38.658-46.92,51.102-75.889c12.445-28.971,18.666-59.979,18.666-93.024c0-33.046-6.221-64.056-18.666-93.024    c-12.441-28.968-29.477-54.264-51.102-75.888c-21.623-21.624-46.92-38.658-75.887-51.102    C331.806,35.598,300.798,29.376,267.75,29.376z M336.294,312.121c25.703-8.979,38.555-25.908,38.555-50.797    c0-13.056-2.141-23.358-6.426-30.906c-4.283-7.548-11.117-13.77-20.502-18.666c-4.488-2.448-9.791-3.876-15.912-4.284    c-6.119-0.408-12.645-0.51-19.584-0.306c-6.936,0.204-14.277,0.612-22.031,1.224c-7.752,0.612-15.504,0.918-23.254,0.918    c-7.752,0-15.504-0.306-23.256-0.918s-15.096-1.02-22.032-1.224s-13.464-0.102-19.584,0.306s-11.424,1.836-15.912,4.284    c-9.384,4.896-16.116,11.118-20.196,18.666s-6.12,17.85-6.12,30.906c0,24.889,12.852,41.82,38.556,50.797    c4.488,1.223,9.384,2.445,14.688,3.672c4.488,0.813,10.098,1.631,16.83,2.445c6.732,0.816,14.586,1.227,23.562,1.227h26.927    c8.568,0,16.32-0.408,23.26-1.227c6.936-0.814,12.852-1.633,17.748-2.445C327.318,314.568,332.214,313.344,336.294,312.121z     M409.734,223.38c0,13.056-1.43,25.398-4.283,37.026c-2.857,11.625-8.16,22.135-15.912,31.518    c-7.752,9.385-18.463,17.137-32.131,23.256c-13.668,6.121-31.109,9.996-52.326,11.629c3.264,1.631,7.447,3.672,12.547,6.119    c5.1,2.449,9.486,7.141,13.158,14.076c2.039,4.486,3.365,11.016,3.977,19.584c0.613,8.566,0.918,17.34,0.918,26.314    c0,8.979-0.102,17.238-0.305,24.785c-0.205,7.549,0.102,12.141,0.918,13.771c1.631,3.264,3.979,6.119,7.037,8.566    c3.061,2.447,5.611,4.283,7.65,5.508c2.039,1.227,2.65,2.756,1.836,4.592c-0.816,1.836-3.672,2.959-8.568,3.363    c-2.447,0-5.508-0.404-9.18-1.223c-3.672-0.816-7.143-2.244-10.404-4.285c-3.262-2.039-6.018-4.59-8.262-7.646    c-2.244-3.063-3.365-7.039-3.365-11.938v-50.184c0-5.711-1.326-9.791-3.98-12.24c-2.648-2.447-5.402-4.08-8.262-4.895v66.096    c0,11.832,1.428,19.584,4.285,23.256c1.223,1.633,2.346,3.367,3.365,5.203s1.633,3.365,1.836,4.59    c0.205,1.223-0.51,1.938-2.145,2.143c-1.631,0.203-4.689-0.307-9.18-1.529c-8.568-2.039-14.688-6.732-18.359-14.076    s-5.508-15.096-5.508-23.256v-64.871h-13.461v64.871c0,8.16-1.734,15.912-5.202,23.256s-9.69,12.037-18.666,14.076    c-4.488,1.225-7.446,1.732-8.874,1.529c-1.428-0.203-2.142-0.92-2.142-2.143c0-1.225,0.612-2.754,1.836-4.59    s2.448-3.57,3.672-5.203c0.816-1.631,1.734-4.488,2.754-8.568c1.02-4.078,1.53-8.975,1.53-14.688v-66.096    c-2.856,0.814-5.508,2.445-7.956,4.896c-2.448,2.447-3.672,6.527-3.672,12.24v50.184c0,4.896-1.122,8.873-3.366,11.936    c-2.244,3.061-4.998,5.607-8.262,7.648c-3.264,2.039-6.732,3.471-10.404,4.283c-3.672,0.816-6.732,1.225-9.18,1.225    c-4.896-0.406-7.752-1.527-8.568-3.363s-0.204-3.367,1.836-4.59c2.04-1.227,4.59-3.063,7.65-5.512    c3.06-2.445,5.406-5.303,7.038-8.564c0.816-2.041,1.122-7.447,0.918-16.221c-0.204-8.771-0.306-18.463-0.306-29.068    c-3.264,1.225-7.548,2.041-12.852,2.449c-5.304,0.404-11.22,0-17.748-1.227c-11.016-2.041-19.38-5.607-25.092-10.711    c-5.712-5.1-11.22-13.158-16.524-24.174c-2.856-5.303-6.018-9.689-9.486-13.158c-3.468-3.467-6.528-6.221-9.18-8.262    c-2.652-2.039-4.692-3.773-6.12-5.201c-1.428-1.428-1.53-2.754-0.306-3.979c2.448-2.855,5.814-4.08,10.098-3.674    c4.284,0.408,6.834,1.021,7.65,1.836c4.896,2.039,9.792,6.324,14.688,12.854c4.896,6.531,9.996,12.037,15.3,16.523    c2.448,2.039,5.508,4.078,9.18,6.119c3.672,2.039,7.752,3.471,12.24,4.283c4.488,0.816,9.384,0.816,14.688,0    c5.304-0.813,10.608-3.059,15.912-6.729c1.224-5.307,3.162-9.486,5.814-12.549c2.652-3.061,5.508-5.508,8.568-7.344    c3.06-1.836,5.916-3.264,8.568-4.285c2.652-1.02,4.794-1.938,6.426-2.754c-22.44-1.631-40.8-5.402-55.08-11.318    s-25.602-13.467-33.966-22.646c-8.364-9.18-14.076-19.686-17.136-31.519c-3.06-11.832-4.59-24.276-4.59-37.332    c0-13.464,2.04-25.5,6.12-36.108s9.792-19.992,17.136-28.152c-3.264-9.792-4.386-20.094-3.366-30.906s3.162-20.502,6.426-29.07    c15.504,0.816,28.458,4.08,38.862,9.792c10.404,5.712,17.646,10.404,21.726,14.076c17.544-4.896,35.7-7.344,54.468-7.344h4.284    c17.543,0,34.479,2.04,50.795,6.12c4.488-3.672,11.832-8.16,22.033-13.464c10.199-5.304,22.85-8.364,37.943-9.18    c3.264,8.16,5.406,17.34,6.426,27.54c1.021,10.2,0.307,19.992-2.141,29.376c8.16,8.16,14.48,17.85,18.971,29.07    C407.49,196.35,409.734,209.1,409.734,223.38z M266.526,209.304h0.612h0.612H266.526z M345.474,257.04    c0,5.712-1.527,10.608-4.59,14.688c-3.061,4.08-6.834,6.119-11.322,6.119c-4.486,0-8.158-2.039-11.016-6.119    c-2.854-4.081-4.285-8.977-4.285-14.688s1.432-10.608,4.285-14.688c2.855-4.08,6.527-6.12,11.016-6.12s8.264,2.04,11.322,6.12    C343.945,246.432,345.474,251.328,345.474,257.04z M225.522,257.04c0,5.712-1.53,10.608-4.59,14.688s-6.834,6.119-11.322,6.119    s-8.16-2.039-11.016-6.119c-2.856-4.081-4.284-8.977-4.284-14.688s1.428-10.608,4.284-14.688s6.528-6.12,11.016-6.12    s8.262,2.04,11.322,6.12C223.993,246.432,225.522,251.328,225.522,257.04z"/>
@@ -71,8 +72,10 @@
             </h1>
             <div class="ip-loader">
                 <svg class="ip-inner" width="60px" height="60px" viewBox="0 0 80 80">
-                    <path class="ip-loader-circlebg" d="M40,10C57.351,10,71,23.649,71,40.5S57.351,71,40.5,71 S10,57.351,10,40.5S23.649,10,40.5,10z"/>
-                    <path id="ip-loader-circle" class="ip-loader-circle" d="M40,10C57.351,10,71,23.649,71,40.5S57.351,71,40.5,71 S10,57.351,10,40.5S23.649,10,40.5,10z"/>
+                    <path class="ip-loader-circlebg"
+                          d="M40,10C57.351,10,71,23.649,71,40.5S57.351,71,40.5,71 S10,57.351,10,40.5S23.649,10,40.5,10z"/>
+                    <path id="ip-loader-circle" class="ip-loader-circle"
+                          d="M40,10C57.351,10,71,23.649,71,40.5S57.351,71,40.5,71 S10,57.351,10,40.5S23.649,10,40.5,10z"/>
                 </svg>
             </div>
         </header><!-- /load animate -->
@@ -84,11 +87,12 @@
             <p>前端工作 & 1.5年</p>
             <p>中国 · 江苏 · 苏州</p>
             <div class="space-line"></div>
-            <p>个人工作态度端正，有良好进取心，学习能力强，可快速融入团队。
-                熟悉W3C标准，对表现与数据分离、Web语义化等有深刻理解。 深入理解JavaScript面向对象原理、熟悉MVC的设计模式。 理解AJAX运作机制，熟练掌握JQuery等主流JS框架。
-                能够熟练应用HTML/CSS/JavaScript技术，开发符合W3C标准的网站前端页面。
-            </p>
-            <p>【但是】不安心于仅仅只做一名前端工程师，目前也在学习nodejs相关技术知识， 希望能在这一条路上走得更远！~</p>
+            <p>熟悉W3C标准，对表现与数据分离、Web语义化等有深刻理解。</p>
+            <p>能够熟练应用HTML/CSS/JavaScript技术，开发符合W3C标准的网站前端页面。</p>
+            <p>理解JavaScript面向对象原理、熟悉MVC的设计模式。理解AJAX运作机制，熟练掌握JQuery等主流JS框架。</p>
+            <p>掌握Node 技术框架（Express、Restify），有实际的项目经验。</p>
+            <p>掌握现代前端开发流程。掌握 Gulp、Sass 、Npm、Git、websocket。</p>
+            <p>事业心强，勤奋好学，责任心强，工作踏实，能承受较大的工作压力，良好的交流与沟通能力,有团队精神。</p>
         </div>
     </div>
     <div class="section" id="section_two">
@@ -136,7 +140,7 @@
 
         <div class="space-line"></div>
 
-        <p>技能树（已点）</p>
+        <p>技能树列表</p>
 
         <div class="skills-panel">
             <div class="skill-item">
@@ -556,28 +560,81 @@
         <div class="experence">
             <div class="wrapper">
                 <div class="light"><i></i></div>
-                <hr class="line-left">
-                <hr class="line-right">
                 <div class="main">
-                    <h1 class="title">至今</h1>
+                    <h1 class="title">经历</h1>
                     <div class="year">
                         <h2><a href="#">2016年<i></i></a></h2>
                         <div class="list">
                             <ul>
-                                <li class="cls highlight">
-                                    <p class="date">3月26日</p>
-                                    <p class="intro">test</p>
+                                <li class="cls">
+                                    <p class="date">11月</p>
+                                    <p class="intro">不知不觉成为前端工程师工作快一年了</p>
                                     <p class="version">&nbsp;</p>
                                     <div class="more">
-                                        <p>test</p>
+                                        <p>在这一年里， 真心感谢公司对我的信任和自己的辛苦努力，让我学到了不少知识。
+                                            同时我也意识到，我的工作对于我来说不仅仅是一份工作，而是一份事业，能够让我奋发图强为之奋斗的事业。</p>
+                                        <p>在这一年里，我也学习了Node.js,我很喜欢它，我喜欢由这项技术给前端界带来的更大的发展潜力，我喜欢它给前端开发带来的变革。</p>
+                                        <p>最后，借由这篇文章《<a
+                                                href="https://philipwalton.com/articles/how-to-become-a-great-front-end-engineer/"
+                                                target="_blank">How to Become a Great Front-End Engineer</a>》，我的目标是成为一名优秀的前端工程师！
+                                        </p>
                                     </div>
                                 </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="year">
+                        <h2><a href="#">2015年<i></i></a></h2>
+                        <div class="list">
+                            <ul>
                                 <li class="cls highlight">
-                                    <p class="date">1月</p>
-                                    <p class="intro">test2</p>
+                                    <p class="date">12月底</p>
+                                    <p class="intro">我终于成为了一名前端工程师</p>
                                     <p class="version">&nbsp;</p>
                                     <div class="more">
-                                        <p>test2</p>
+                                        <p>怀着兴奋和激动的心情，我进入了新公司。负责公司平台的前端开发。</p>
+                                    </div>
+                                </li>
+                                <li class="cls">
+                                    <p class="date">12月</p>
+                                    <p class="intro">入门</p>
+                                    <p class="version">&nbsp;</p>
+                                    <div class="more">
+                                        <p>经过了半年系统性的学习， 对于前端的理论基础知识，我认为已经能够基本掌握，所以我开始，面试和找工作了</p>
+                                    </div>
+                                </li>
+
+                                <li class="cls highlight">
+                                    <p class="date">5月</p>
+                                    <p class="intro">起点</p>
+                                    <p class="version">&nbsp;</p>
+                                    <div class="more">
+                                        <p>
+                                            说起来走上前端这条路是从网易云课堂的WEB前端开发网课开始的，虽然说。。知乎上关于它的评论大多是一片骂声，但是无论如何，就我而已，这门网课给我提供的系统性的知识还是很完整的，这让我在以后的工作中受益匪浅。</p>
+                                    </div>
+                                </li>
+
+                                <li class="cls">
+                                    <p class="date">4月</p>
+                                    <p class="intro">转折</p>
+                                    <p class="version">&nbsp;</p>
+                                    <div class="more">
+                                        <p>终于有一天，意识到自己受够了这些没有成就感的工作，我开始寻求改变。</p>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="year">
+                        <h2><a href="#">2013年<i></i></a></h2>
+                        <div class="list">
+                            <ul>
+                                <li class="cls">
+                                    <p class="date">6月</p>
+                                    <p class="intro">毕业</p>
+                                    <p class="version">&nbsp;</p>
+                                    <div class="more">
+                                        <p>顺利从学校毕业，抱着对未来一片茫然的心情，开始在某个小县城干着某个无关紧要的工作。</p>
                                     </div>
                                 </li>
                             </ul>
@@ -607,6 +664,10 @@
 <script src="assets/js/vender/jquery-1.12.4.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="assets/js/load_animate.js" type="text/javascript" charset="utf-8"></script>
 <script src="assets/js/vender/nprogress.js" type="text/javascript" charset="utf-8"></script>
+<script>
+    //页面加载进度条启用
+    NProgress.start();
+</script>
 <script src="assets/js/vender/jquery.fullPage.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="assets/js/vender/jquery.video-bg.js" type="text/javascript" charset="utf-8"></script>
 <script src="assets/js/section_one.js" type="text/javascript" charset="utf-8"></script>
@@ -617,6 +678,4 @@
 <script src="assets/js/vender/echarts-wordcloud.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="assets/js/section_four.js" type="text/javascript" charset="utf-8"></script>
 </body>
-
-
 </html>
