--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div id="header_p">
                     <p id="header_p1">Liuwei</p>
                     <p id="header_p2">
-                        <small>He is a Front-End Engineer</small>
+                        <small>JS on the front, JS on that back, JS at supper time.</small>
                     </p>
                 </div>
             </div>
